// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LedgerConfirmation > should render 1`] = `
<DocumentFragment>
  <div
    class="space-y-5"
  >
    <div
      class="text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="flex items-center space-x-3 rounded-xl border border-theme-warning-200 bg-theme-warning-50 px-6 py-5 dark:border-theme-warning-600 dark:bg-transparent"
      data-testid="LedgerConfirmation-loading_message"
    >
      <div
        class="animate-spin rounded-full border-[5px] flex-shrink-0 w-5 h-5 border-theme-warning-200 dark:border-theme-secondary-800 border-l-theme-warning-900 dark:border-l-theme-warning-600"
      />
      <div
        class="h-4 relative mx-2 inline-block border-l border-t-0 border-solid align-middle text-theme-warning-200 dark:text-theme-secondary-800"
      />
      <p
        class="font-semibold text-theme-secondary-700 dark:text-theme-warning-600"
      >
        This transaction is pending confirmation
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LedgerConfirmation > should render with children 1`] = `
<DocumentFragment>
  <div
    class="space-y-5"
  >
    <div
      class="text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="flex items-center space-x-3 rounded-xl border border-theme-warning-200 bg-theme-warning-50 px-6 py-5 dark:border-theme-warning-600 dark:bg-transparent"
      data-testid="LedgerConfirmation-loading_message"
    >
      <div
        class="animate-spin rounded-full border-[5px] flex-shrink-0 w-5 h-5 border-theme-warning-200 dark:border-theme-secondary-800 border-l-theme-warning-900 dark:border-l-theme-warning-600"
      />
      <div
        class="h-4 relative mx-2 inline-block border-l border-t-0 border-solid align-middle text-theme-warning-200 dark:text-theme-secondary-800"
      />
      <p
        class="font-semibold text-theme-secondary-700 dark:text-theme-warning-600"
      >
        This transaction is pending confirmation
      </p>
    </div>
  </div>
  <section
    data-testid="LedgerReview__details"
  >
    <h2
      class="mb-0 text-2xl font-bold"
    >
      Transaction Details
    </h2>
    confirmation
  </section>
</DocumentFragment>
`;

exports[`LedgerConfirmation > should render with children and custom heading 1`] = `
<DocumentFragment>
  <div
    class="space-y-5"
  >
    <div
      class="text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="flex items-center space-x-3 rounded-xl border border-theme-warning-200 bg-theme-warning-50 px-6 py-5 dark:border-theme-warning-600 dark:bg-transparent"
      data-testid="LedgerConfirmation-loading_message"
    >
      <div
        class="animate-spin rounded-full border-[5px] flex-shrink-0 w-5 h-5 border-theme-warning-200 dark:border-theme-secondary-800 border-l-theme-warning-900 dark:border-l-theme-warning-600"
      />
      <div
        class="h-4 relative mx-2 inline-block border-l border-t-0 border-solid align-middle text-theme-warning-200 dark:text-theme-secondary-800"
      />
      <p
        class="font-semibold text-theme-secondary-700 dark:text-theme-warning-600"
      >
        This transaction is pending confirmation
      </p>
    </div>
  </div>
  <section
    data-testid="LedgerReview__details"
  >
    <h2
      class="mb-0 text-2xl font-bold"
    >
      heading
    </h2>
    confirmation
  </section>
</DocumentFragment>
`;
